@@ -485,17 +485,22 @@ parameter_list|)
 block|{
 comment|// expecting exception here
 block|}
+finally|finally
+block|{
 if|if
 condition|(
 name|dn
 operator|!=
 literal|null
 condition|)
+block|{
 name|dn
 operator|.
 name|shutdown
 argument_list|()
 expr_stmt|;
+block|}
+block|}
 name|assertNull
 argument_list|(
 literal|"Data-node startup should have failed."
@@ -700,6 +705,20 @@ operator|.
 name|MAX_VALUE
 argument_list|)
 expr_stmt|;
+name|File
+name|dataDir
+init|=
+operator|new
+name|File
+argument_list|(
+name|BASE_DIR
+argument_list|,
+literal|"data"
+argument_list|)
+operator|.
+name|getCanonicalFile
+argument_list|()
+decl_stmt|;
 name|Configuration
 name|conf
 init|=
@@ -710,6 +729,30 @@ argument_list|(
 literal|0
 argument_list|)
 decl_stmt|;
+name|conf
+operator|.
+name|set
+argument_list|(
+name|DFSConfigKeys
+operator|.
+name|DFS_DATANODE_DATA_DIR_KEY
+argument_list|,
+name|makeURI
+argument_list|(
+literal|"file"
+argument_list|,
+literal|null
+argument_list|,
+name|fileAsURI
+argument_list|(
+name|dataDir
+argument_list|)
+operator|.
+name|getPath
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
 name|long
 name|prevLimit
 init|=
@@ -726,6 +769,11 @@ operator|.
 name|DFS_DATANODE_MAX_LOCKED_MEMORY_DEFAULT
 argument_list|)
 decl_stmt|;
+name|DataNode
+name|dn
+init|=
+literal|null
+decl_stmt|;
 try|try
 block|{
 comment|// Try starting the DN with limit configured to the ulimit
@@ -740,11 +788,6 @@ argument_list|,
 name|memlockLimit
 argument_list|)
 expr_stmt|;
-name|DataNode
-name|dn
-init|=
-literal|null
-decl_stmt|;
 name|dn
 operator|=
 name|DataNode
@@ -763,6 +806,10 @@ name|dn
 operator|.
 name|shutdown
 argument_list|()
+expr_stmt|;
+name|dn
+operator|=
+literal|null
 expr_stmt|;
 comment|// Try starting the DN with a limit> ulimit
 name|conf
@@ -814,6 +861,19 @@ block|}
 block|}
 finally|finally
 block|{
+if|if
+condition|(
+name|dn
+operator|!=
+literal|null
+condition|)
+block|{
+name|dn
+operator|.
+name|shutdown
+argument_list|()
+expr_stmt|;
+block|}
 name|conf
 operator|.
 name|setLong
